--- a/aboutus.html
+++ b/aboutus.html
@@ -74,7 +74,33 @@
             cuisines in a pan.
           </p>
         </div>
-        <div></div>
+        <div class="col-sm">
+          <div class="card">
+            <h3 class="card-header bg-primary text-white" id="cardTitle">Facts At a Glance</h3>
+            <div class="card-body">
+              <dl class="row">
+                <dt class="col-6">Started</dt>
+                <dd class="col-6">11 Sep. 2022</dd>
+                <dt class="col-6">Major Stake Holder</dt>
+                <dd class="col-6">HK Fine Foods Inc.</dd>
+                <dt class="col-6">Last Year's Turnover</dt>
+                <dd class="col-6">$1,250,375</dd>
+                <dt class="col-6">Employees</dt>
+                <dd class="col-6">40</dd>
+              </dl>
+            </div>
+          </div>
+        </div>
+        <div class="col-12">
+          <blockquote class="blockquote"></blockquote>
+          <div class="card card-body bg-light">            
+              <p class="mb-0">It better start 20 years ago or else start now.
+              </p>
+              <footer class="blockquote-footer">Kaymid - Dang Dinh Quan DE160477</footer>
+              <cite title="Source Title">Goals and Love of Kaymid</cite>
+            </blockquote>
+          </div>
+        </div>
       </div>
 
       <div class="row row-content">
@@ -130,6 +156,43 @@
             >
           </p>
         </div>
+        </div>
+        <div class="row row-content container"">
+          <h2 id="factsFigures">Facts & Figures</h2>
+          <div class="col-12 col-sm-9" id ="factsContentDetails">
+            <div class="table-responsive">
+              <table class="table table-striped">
+                <thead class="thead-dark">
+                  <th>&nbsp;</th> <!--non breaking space : will bot break into new line-->
+                  <th>2013</th>
+                  <th>2014</th>
+                  <th>2015</th>
+                </thead>
+                <tbody>
+                  <th>Employees</th>
+                  <td>15</td>
+                  <td>30</td>
+                  <td>40</td>
+                  <tr></tr>
+                  <th>Guests Served</th>
+                  <td>15000</td>
+                  <td>45000</td>
+                  <td>100,000</td>
+                  <tr></tr>
+                  <th>Special Events</th>
+                  <td>3</td>
+                  <td>20</td>
+                  <td>45</td>
+                  <tr></tr>
+                  <th>Annual Turnover</th>
+                  <td>$251,325</td>
+                  <td>$1,250,375</td>
+                  <td>~$3,000,000</td>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div class="col-12 col-sm-3"></div>
         </div>
       </div>
     </div>
