--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,11 @@
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" href="css/aboutusstyle.css" />
+    <link rel="stylesheet" href="css/loading.css">
   </head>
 
   <body>
@@ -15,22 +19,26 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar"> <!-- Tạo ra một option để ẩn và hiện item nav bar -->
               <span class="navbar-toggler-icon"></span>
           </button>
+          <a href="index.html" class="navbar-brand mr-auto"><img src="img/logo.png" height="30" width="41"></a>
           <a class="navbar-brand mr-auto" href="index.html">Ristorante Con Fusion</a> 
           <div class="collapse navbar-collapse" id="Navbar"> 
               <!-- navbar-collapse dùng để tách item-->
               <div class="collapse navbar-collapse"></div>
               <ul class="navbar-nav mr-auto">
-                  <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                  <li class="nav-item active"><a class="nav-link" href="aboutus.html">About us</a></li>
-                  <li class="nav-item"><a class="nav-link" href="contactus.html">Contact us</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-              </ul>
+                <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg">Home</i></a></li>
+                <li class="nav-item active"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg">About us</i></a></li>
+                <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-list fa-lg">Contact us</i></a></li>
+                <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-address-card fa-lg">Menu</i></a></li>
+            </ul>
           </div>
           
       </div>
   </nav>
     <header class="jumbotron"> <!-- dùng để highlight các tên contents-->
       <div class="container"> <!---->
+        <div class="col-12 col-sm align-self-center">
+          <img src="img/logo.png" id="indexLogo" class="img-fluid">
+      </div>
         <div class="row row-header">
           <div class="col-12">
             <h1>Ristorante con Fusion</h1>
@@ -48,7 +56,7 @@
     <div class = "container">
       <div class="row row-content">
         <div class="col-12">
-          <ol class="col-12 breadcrumb">
+          <ol class="col-12 breadcrumb"> <!--breadcrumb : display small navigation in body-->
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
             <li class="breadcrumb-item active">About us</li>
           </ol>
@@ -221,14 +229,14 @@
             </address>
           </div>
           <div class="col-12 col-sm-4 align-self-center">
-            <div class="text-center">
-              <a href="http://google.com/+">Google+</a>
-              <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-              <a href="http://www.linkedin.com/in/">LinkedIn</a>
-              <a href="http://twitter.com/">Twitter</a>
-              <a href="http://youtube.com/">YouTube</a>
-              <a href="mailto:">Mail</a>
-            </div>
+            <div class="text-center" >
+              <a class="btn btn-social-icon btn-google" href="http://google.com/"><i class="fa fa-google-plus"></i></a>
+              <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
+              <a class="btn btn-social-icon btn-linkedin"href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
+              <a class="btn btn-social-icon btn-google" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+              <a class="btn btn-social-icon btn-youtube"href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+              <a class="btn btn-social-icon btn-mail" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+          </div>
           </div>
         </div>
         <div class="row justify-content-center">
