--- a/contactus.html
+++ b/contactus.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link href="css/contacus.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/loading.css">
 </head>
 
 <body>
@@ -22,15 +23,16 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar"> <!-- Tạo ra một option để ẩn và hiện item nav bar -->
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <a href="index.html" class="navbar-brand mr-auto"><img src="img/logo.png" height="30" width="41"></a>
             <a class="navbar-brand mr-auto" href="index.html">Ristorante Con Fusion</a> 
             <div class="collapse navbar-collapse" id="Navbar"> 
                 <!-- navbar-collapse dùng để tách item-->
                 <div class="collapse navbar-collapse"></div>
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="aboutus.html">About us</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="contactus.html">Contact us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg">Home</i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg">About us</i></a></li>
+                    <li class="nav-item active"><a class="nav-link" href="contactus.html"><i class="fa fa-list fa-lg">Contact us</i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-address-card fa-lg">Menu</i></a></li>
                 </ul>
             </div>
             
@@ -39,6 +41,9 @@
 
     <header class="jumbotron">
         <div class="container">
+            <div class="col-12 col-sm align-self-center">
+                <img src="img/logo.png" id="indexLogo" class="img-fluid">
+            </div>
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
