--- a/contactus.html
+++ b/contactus.html
@@ -95,7 +95,7 @@
                </div>
             </div>
         </div>
-
+        <!--SEND US YOUR FEEDBACK-->
         <div class="row row-content">
            <div class="col-12">
               <h3>Send us your Feedback</h3>
@@ -103,17 +103,61 @@
             <div class="col-12 col-md-9">
                 <form>
                     <div class=" from-group row">
-                        <label for="firstname" class="col-md-2 col-form-label">First Name</label>
+                        <label for="firstname" class="col-12 col-md-2 col-form-label">First Name</label>
                         <div class="col-md-10">
                             <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name">
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="lastname" class="col-md-2 col-form-label">Last Name</label>
+                        <label for="lastname" class="col-12 col-md-2 col-form-label">First Name</label>
                         <div class="col-md-10">
                             <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last Name">
                         </div>
-                        <button class="ml-5"type="submit">Submit</button>
+                    </div>
+                    <div class=" from-group row">
+                        <label for="areacode" class="col-12 col-md-2 col-form-label">Area Code</label>
+                        <div class="col-5 col-md-3 ">
+                            <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area Code">
+                        </div>
+                        <div class="form-group row">
+                            <!-- <label for="telnum" class="col-12 col-md-2 col-form-label">Tel. Number</label> -->
+                            <div class="col-7 col-md-7">
+                                <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel. Number">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="emailid" class="col-12 col-md-2 col-form-label">Email</label>
+                        <div class="col-md-10">
+                            <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="from-group row">
+                        <div class="col-md-6 offset-md-2">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" name="approve" id="approve"value="">
+                                <label for="approve" class="form-check">
+                                    <strong>May we contact you?</strong>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 offset-md-1">
+                            <select class="form-control">
+                                <option>Tel.</option>
+                                <option>Email</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="feedback" class="col-12 col-md-2 col-form-label">Your Feedback</label>
+                        <div class="col-md-10">
+                            <textarea name="feedback" id="feedback" class="form-control" rows="12"></textarea> <!--Rows="12" de create ra 12 hang-->
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="offset-md-2 col-md-10">
+                            <button class="btn btn-primary"type="submit">Send Feedback</button>
+                        </div>
                     </div>
                 </form>
             </div>
