--- a/index.html
+++ b/index.html
@@ -136,6 +136,58 @@
     </header>
 
     <div class="container">
+
+      <!--CAROUSEL-->
+      <div class="row row-content">
+        <div class="col">
+          <div class="carousel slide" id="mycarousel" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+              <div class="carousel-item active">
+                <img src="img/uthappizza.png" alt="uthappizza" class="d-block img-fluid">
+                <div class="carousel-caption d-none d-md-block">
+                  <!--Overlay the caption on the image-->
+                  <h2>Uthappizza <span class="badge badge-danger" id="hotBadge1">HOT</span> <span class="badge badge-pill badge-secondary" id="dollaBadge1">$4.99</span></h2>
+                    <span class="badge badge-danger" id="hotBadge2">HOT</span> <br> <span class="badge badge-pill badge-secondary" id="dollaBadge2">$4.99</span>
+                    <p id="fadeshow1" >A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/buffet.png" alt="buffet" class="d-block img-fluid">
+                <div class="carousel-caption d-none d-md-block">
+                  <h2>Weekend Grand Buffet 
+                    <span class="badge bg-danger text-white">New</span></h2>
+                    <p id="fadeshow2" class="mt-5">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>  
+                </div>
+                
+              </div>
+              <div class="carousel-item">
+                <img src="img/alberto.png" alt="alberto" class="d-block img-fluid">
+                <div class="carousel-caption d-none d-md-block">
+                  <h2>Alberto Somayya</h2>
+                  <h4>Executive Chef</h4>
+                  <p id="fadeshow3">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                </div>
+              </div>
+            </div>
+            <!--CAROUSEL CONTROL-->
+            <!--Indicators : will be position on the carousel slide -->
+            <ol class="carousel-indicators">
+              <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#mycarousel" data-slide-to="1"></li>
+              <li data-target="#mycarousel" data-slide-to="2"></li>
+            </ol>
+            <!--Tạo ra 2 icon có chức năng view item trước hoặc sau của carousel slide-->
+            <a href="#mycarousel" class="carousel-control-prev" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a href="#mycarousel" class="carousel-control-next" role="button" data-slide="next">
+              <span class="carousel-control-next-icon"></span>
+            </a>
+          </div>
+        </div>
+      </div>
+
         <!--UTHAPPIZZA-->
         <div class ="row row-content align-items-center">
 
@@ -155,9 +207,10 @@
                  
                 <div class="media">
                     <img src="img/uthappizza.png" alt="Uthappizza" class="d-flex mr-3 img-thumbnail align-self-center">
-                    <div class="media-body"><h2 class="mt-0" id="uthappizzaContent">Uthappizza <span class="badge badge-danger" id="hotBadge1">HOT</span> <span class="badge badge-pill badge-secondary" id="dollaBadge1">$4.99</span></h2>
-                        <span class="badge badge-danger" id="hotBadge2">HOT</span> <br> <span class="badge badge-pill badge-secondary" id="dollaBadge2">$4.99</span>
-                        <p id="fadeshow1">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                    <div class="media-body">
+                      <h2 class="mt-0" id="uthappizzaContent">Uthappizza <span class="badge badge-danger" id="hotBadge1">HOT</span> <span class="badge badge-pill badge-secondary" id="dollaBadge1">$4.99</span></h2>
+                      <span class="badge badge-danger" id="hotBadge2">HOT</span> <br> <span class="badge badge-pill badge-secondary" id="dollaBadge2">$4.99</span>
+                      <p id="fadeshow1">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>
                 </div>
             </div>
