--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
 <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/styles.css">
 <link rel="stylesheet" href="css/loading.css">
+<link rel="stylesheet/less" href="css/styles.less">
 
 <script src="index.js"></script>
 <!-- Ex8-->
@@ -368,17 +369,17 @@
         </div>
     </div>
     </div>
-
+  </div>
     <!--REVERSE TABLE  (REMOVED)-->   
 
 <!--FOOTER-->
-
-    <footer class="footer">
-        <div class="container">
+  
+  <div class="jumbotron pr-5 pl-5">
+    <div class="container">   
             <div class="row">             
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
-                    <ul class="list-unstyled">
+                    <ul class="list-unstyled"">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="aboutus.html">About Us</a></li>
                         <li><a href="#">Menu</a></li>
@@ -414,7 +415,8 @@
            </div>
         </div>
         </div>
-    </footer>
+    </div>
+  </div>
 </div>
 </div>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
