--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/loading.css">
 d
     <!--JS-->
-    <script src="aboutus.js"></script>
+    <script src="js/aboutus.js"></script>
   </head>
 
 <!--BODY-->
