--- a/aboutus.html
+++ b/aboutus.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Ristorante Con Fusion: About Us</title>
+    <!--build: css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
@@ -13,7 +14,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="css/aboutusstyle.css" />
     <link rel="stylesheet" href="css/loading.css">
-d
+    <!-- endbuild -->
     <!--JS-->
     <script src="js/aboutus.js"></script>
   </head>
@@ -332,5 +333,7 @@ d
         </div>
       </div>
     </footer>
+    <!--build:js js/main.js-->
+    <!-- endbuild -->
   </body>
 </html>
