--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
  <meta http-equiv="x-ua-compatible" content="ie=edge">
 
 <!-- Bootstrap CSS -->
+<!--build: css css/main.css -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 
 <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -21,6 +22,9 @@
 <link rel="stylesheet" href="css/styles.css">
 <link rel="stylesheet" href="css/loading.css">
 <link rel="stylesheet/less" href="css/styles.less">
+
+<!-- endbuild -->
+
 
 <script src="js/index.js"></script>
 <script src="js/script.js"></script>
@@ -120,7 +124,8 @@
 
     <!--HEADER-->
 
-    <header class = "jumbotron">    
+    <header class = "jumbotron"> 
+      <!-- <iframe width="768" height="432" src="https://miro.com/app/live-embed/uXjVPaXbHuY=/?moveToViewport=-9226,-1814,30063,6075&embedId=350500112535" frameborder="0" scrolling="no" allowfullscreen></iframe>    -->
         <div class="container">
             <div class="row row-header">
                 <div class=" col-12 col-sm-6">
@@ -435,7 +440,7 @@
 </div>
 </div>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
-  
+  <!--build:js js/main.js-->
 
 · <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 
@@ -489,7 +494,7 @@ $('#loginButton').on('click', function() {
  //     $('[data-toggle="tooltip"]').tooltip();
    // });
   </script>
-
+  <!-- endbuild-->
 </body>
 
 </html>
